# divergence-arena

./: Cargo.toml  README.md
audit/: security-audit.md
bots/: strategy-definitions.md
divergence-arena/: README.md
divergence-arena/audit/: security-audit.md
divergence-arena/deploy/: deployment-log.md
divergence-arena/programs/divergence-arena/: Cargo.toml
divergence-arena/programs/divergence-arena/src/: architect-output.md  lib.rs
divergence-arena/programs/divergence-arena/tests/: integration.rs
divergence-arena/reports/: tournament-report.md
divergence-arena/results/: bot-001-random.md  bot-002-random.md  bot-003-random.md  bot-004-nash.md  bot-005-nash.md  bot-006-level-k1.md  bot-007-level-k2.md  bot-008-trend.md  bot-009-contrarian.md  bot-010-adaptive.md
divergence-arena/strategies/: strategy-definitions.md
programs/trust-bazaar/src/: architect-output.md
results/: bot-001-tit-for-tat.md  bot-004-grudger.md  bot-006-probe-exploit.md  bot-008-generous-tit-for-tat.md  bot-010-adaptive.md
trust-bazaar/: README.md
trust-bazaar/deploy/: deployment-log.md
trust-bazaar/programs/trust-bazaar/: Cargo.toml
trust-bazaar/programs/trust-bazaar/src/: lib.rs
trust-bazaar/programs/trust-bazaar/tests/: integration.rs
trust-bazaar/reports/: tournament-report.md
trust-bazaar/results/: bot-002-always-cooperate.md  bot-003-always-defect.md  bot-005-pavlov.md  bot-007-random.md  bot-009-stake-mirror.md
