[package]
name = "trust-bazaar"
version = "0.1.0"
edition = "2021"
description = "Iterated Prisoner's Dilemma with token staking — Pinocchio BPF program"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
pinocchio = "0.7"
pinocchio-log = "0.3"
pinocchio-pubkey = "0.2"
pinocchio-system = "0.4"

[dev-dependencies]
mollusk-svm = "0.1"
solana-sdk = "2.2"
